# hashmaker

./: .deploy.yml  Cargo.toml  Dockerfile  README.md
src/: hash.rs  main.rs  wordpress.rs
static/: app.js  index.html  style.css
