[package]
name = "hashmaker"
version = "0.1.0"
edition = "2021"
description = "Password hash generator with a built-in SPA"
license = "MIT"

[dependencies]
argon2 = "0.5"
axum = "0.8"
base64 = "0.22"
blake2 = "0.10"
bcrypt = "0.17"
hex = "0.4"
include_dir = "0.7"
md-5 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["getrandom"] }
scrypt = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
